--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "@emotion/styled": "^11.11.0",
         "@material-tailwind/react": "^2.1.2",
         "@mikecousins/react-pdf": "^6.1.1",
-        "@mui/material": "^5.14.11",
+        "@mui/material": "^5.14.12",
+        "@mui/styled-engine-sc": "^5.14.12",
         "@react-pdf-viewer/core": "^3.12.0",
         "@react-pdf/renderer": "^3.1.12",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "antd": "^5.10.0",
         "axios": "^1.5.1",
         "firebase": "^10.4.0",
         "react": "^18.2.0",
@@ -24,6 +26,7 @@
         "react-pdf": "^7.5.0",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
+        "styled-components": "^5.3.11",
         "tw-elements-react": "^1.0.0-alpha1",
         "web-vitals": "^2.1.4"
     },
